--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.MyAndroidProject"
         tools:targetApi="31">
         <activity
+            android:name=".ShowroomActivity"
+            android:exported="true" />
+        <activity
             android:name=".Screen.SupportActivity"
             android:exported="false" />
         <activity
