--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 31 18:37:37 ICT 2024
-sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
+#Sat May 18 17:04:42 ICT 2024
+sdk.dir=D\:\\android_studio_local
