--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,19 @@
         android:theme="@style/Theme.MyAndroidProject"
         tools:targetApi="31">
         <activity
-            android:name=".Customer.ShowroomActivity"
+            android:name=".customer.ShowroomActivity"
             android:exported="true" />
         <activity
-            android:name=".Customer.SupportActivity"
+            android:name=".customer.SupportActivity"
             android:exported="true" />
         <activity
-            android:name=".Customer.HomeActivity"
+            android:name=".customer.HomeActivity"
             android:exported="true" />
         <activity
-            android:name=".Customer.SignUpActivity"
+            android:name=".customer.SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".Customer.LoginActivity"
+            android:name=".customer.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".MainAppActivity"
