--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission
         android:name="android.permission.INTERNET"
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.MyAndroidProject"
         tools:targetApi="31">
         <activity
+            android:name=".customer.activities.MyAccount"
+            android:exported="false" />
+        <activity
             android:name=".customer.activities.ShowroomActivity"
             android:exported="true" />
         <activity
@@ -27,16 +30,17 @@
             android:name=".customer.activities.HomeActivity"
             android:exported="true" />
         <activity
-            android:name=".customer.activities.SignUpActivity"
+            android:name=".SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".customer.activities.LoginActivity"
+            android:name=".LoginActivity"
             android:exported="true" />
         <activity
             android:name=".MainAppActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
