--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,19 +24,20 @@
             android:exported="false" />
         <activity
             android:name=".customer.activities.ShowroomActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".customer.fragments.SupportFragment"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".customer.activities.HomeActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="false" />
+
         <activity
             android:name=".MainAppActivity"
             android:exported="true">
