--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,37 +7,53 @@
         android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidProject"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".customer.activities.MyAccount"
-            android:exported="false" />
+            android:name=".SearchActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
         <activity
-            android:name=".customer.activities.ShowroomActivity"
-            android:exported="false" />
+            android:name=".customer.activities.DetailItemActivity"
+            android:exported="true" />
+        <activity
+            android:name=".customer.activities.MyAccount"
+            android:exported="true" />
+        <activity
+            android:name=".admin.activities.AdminActivity"
+            android:exported="true" />
+        <activity
+            android:name=".customer.activities.DetailsCar"
+            android:exported="true" />
         <activity
             android:name=".customer.fragments.SupportFragment"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".customer.activities.HomeActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
-
+            android:exported="true" />
+        <activity
+            android:name=".shipper.activites.ShipperActivity"
+            android:exported="true" />
         <activity
             android:name=".MainAppActivity"
             android:exported="true">
