--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
+            android:name=".customer.activities.DetailItemActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainAppActivity"
             android:exported="true">
             <intent-filter>
