--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidProject"
-        tools:targetApi="31">
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="34">
+        <activity android:name=".admin.activities.AdminActivity"
+            android:exported="true"/>
         <activity
             android:name=".customer.activities.MyAccount"
             android:exported="false" />
