--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission
         android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +24,16 @@
         android:theme="@style/Theme.MyAndroidProject"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".AdminHeaderMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminAppbarMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminBarMainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyAndroidProject" />
         <activity
             android:name=".SearchActivity"
             android:exported="true" >
