--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,18 +7,23 @@
         android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidProject"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".customer.activities.YourJourneyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".customer.activities.ConfirmDateActivity"
+            android:exported="false" />
         <activity
             android:name=".customer.activities.MyAccount"
             android:exported="false" />
