--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:targetSandboxVersion="1">
-
-    <uses-permission
-        android:name="android.permission.INTERNET"
-        tools:ignore="ManifestOrder"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -35,9 +32,6 @@
             android:name=".customer.activities.YourJourneyActivity"
             android:exported="false" />
         <activity
-            android:name=".customer.activities.ConfirmDateActivity"
-            android:exported="false" />
-        <activity
             android:name=".customer.activities.MyAccount"
             android:exported="false" />
         <activity
@@ -55,7 +49,6 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".customer.activities.DetailItemActivity"
             android:exported="true" />
