--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,18 +37,9 @@
             android:name=".customer.activities.VoucherCustomer"
             android:exported="false" />
         <activity
-            android:name=".customer.fragments.YourJourneyFragment"
+            android:name=".customer.activities.YourJourneyActivity"
             android:exported="false" />
-        <activity
-            android:name=".SearchActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-        </activity>
+
         <activity
             android:name=".customer.activities.DetailItemActivity"
             android:exported="true" />
