--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission
         android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -15,7 +14,6 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-
 
     <application
         android:allowBackup="true"
@@ -28,10 +26,15 @@
         android:theme="@style/Theme.MyAndroidProject"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".shipper.fragment.ShipperOrderFragment"
+            android:exported="false" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA-L7S1M_iM0IswnbICO9F8WpiR2V_fwSE"/>
+            android:value="AIzaSyA-L7S1M_iM0IswnbICO9F8WpiR2V_fwSE" />
+
         <activity
             android:name=".shipper.activites.MapsActivityShipper"
             android:exported="false"
@@ -48,14 +51,19 @@
         <activity
             android:name=".customer.activities.YourJourneyActivity"
             android:exported="false" />
-        <activity android:name=".customer.activities.ChangesPass"
-            android:exported="false"/>
+        <activity
+            android:name=".customer.activities.ChangesPass"
+            android:exported="false" />
+        <activity
+            android:name=".customer.activities.ShowroomActivity"
+            android:exported="false" />
         <activity
             android:name=".customer.fragments.ShowroomSearchFragment"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -90,8 +98,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
