--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".shipper.activites.ShipperActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".admin.activities.AdminActivity"
             android:exported="false" />
@@ -79,6 +79,9 @@
             android:exported="false" />
         <activity
             android:name=".customer.fragments.SupportFragment"
+            android:exported="false" />
+        <activity
+            android:name=".customer.activities.PaymentActivity"
             android:exported="false" />
         <activity
             android:name=".customer.activities.HomeActivity"
