--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,12 +26,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidProject"
         android:usesCleartextTraffic="true"
-        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
+        <activity
+            android:name=".customer.activities.DetailOrderActivity"
+            android:exported="false" />
         <activity
             android:name=".shipper.fragment.ShipperOrderFragment"
             android:exported="false" />
-
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -90,12 +92,15 @@
         <activity
             android:name=".account.LoginActivity"
             android:exported="false" />
-        <activity android:name=".customer.activities.PaymentActivity" android:exported="false" />
+        <activity
+            android:name=".customer.activities.PaymentActivity"
+            android:exported="false" />
         <activity
             android:name=".MainAppActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
